# rust_ls

./: Cargo.toml  README.md  TODO  shell.nix
src/: argument_parsing.rs  color.rs  formattable_string.rs  lib.rs  main.rs  output.rs  output_entry.rs
tests/: test_argument_parsing.rs
