[package]
categories  = ["CLI"]
description = "Personal LS implementation"
edition     = "2021"
keywords    = ["ls"]
license     = "MIT OR Apache-2.0"
name        = "rust_ls"
readme      = "README.md"
repository  = "https://github.com/DomenicoDErasmo/rust_ls"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
